# RouteReconstruction

./: .gitignore  CMakeLists.txt  README.md
GuiMessages/: CMakeLists.txt  GenerateMessageScript.py  GeneratePybindMessageScript.py  TemplateParser.py  messageTemplate.template  messages.json  post.txt  pref.txt  pyBindTemplate.template
GuiMessages/include/GuiMessages/: BaseMessage.h  BytesBuffer.h  GenericMessage.h  Messages.h
GuiMessages/src/: BaseMessage.cpp  BytesBuffer.cpp
LoopsAlgs/: CMakeLists.txt
LoopsAlgs/include/LoopsAlgs/: AlgsInterface.h  FlowDecomposition.h  IFlowDecomposition.h
LoopsAlgs/include/LoopsAlgs/Flow/: DecomposeFlow.h  MinCostFlow.h  MultiCommodityMinCostFlow.h  UncapturableFlow.h
LoopsAlgs/include/LoopsAlgs/FlowDecomposition/: FrechetBandDecomposition.h  FrechetDecomposition.h  FrechetHittingDecomposition.h  GlobalMinCostDecomposition.h  HittingPathsDecomposition.h  ILPFlowDecomposition.h  MultiCommodityDecomposition.h  ShortestPathsDecomposition.h  SimpleDecomposition.h  StateSpaceDecomposition.h  TrivialDecomposition.h  WeightedFrechetPathsDecomposition.h
LoopsAlgs/include/LoopsAlgs/Frechet/: CleanAltSweepline.h  FrechetHelpers.h  FrechetIO.h  FrechetOnGraph.h  FrechetSetFinding.h  LowMemoryFrechetData.h  NewSweepline.h  PathHittingStrongFrechet.h  StrongFrechetGraphBuilder.h  WeakFrechetOnGraph.h  WeightedStrongFrechet.h  WenkSweepline.h
LoopsAlgs/include/LoopsAlgs/MapMatching/: FastMapMatching.h  StrongFrechetMapMatching.h
LoopsAlgs/include/LoopsAlgs/Memory/: GetStats.h
LoopsAlgs/include/LoopsAlgs/Multithreading/: Helpers.h
LoopsAlgs/include/LoopsAlgs/Trajectories/: Coverage.h
LoopsAlgs/src/: IFlowDecomposition.cpp
LoopsAlgs/src/Flow/: DecomposeFlow.cpp  MultiCommodityMinCostFlow.cpp  UncapturableFlow.cpp
LoopsAlgs/src/FlowDecomposition/: FrechetBandDecomposition.cpp  FrechetDecomposition.cpp  FrechetHittingDecomposition.cpp  GlobalMinCostDecomposition.cpp  HittingPathsDecomposition.cpp  ILPFlowDecomposition.cpp  MultiCommodityDecomposition.cpp  ShortestPathsDecomposition.cpp  TrivialDecomposition.cpp  WeightedFrechetPathsDecomposition.cpp
LoopsAlgs/src/Frechet/: FrechetHelpers.cpp  FrechetOnGraph.cpp  LowMemoryFrechetData.cpp  PathHittingStrongFrechet.cpp  WeakFrechetOnGraph.cpp  WeightedStrongFrechet.cpp
LoopsAlgs/src/MapMatching/: FastMapMatching.cpp  StrongFrechetMapMatching.cpp
LoopsAlgs/src/Memory/: GetStats.cpp
LoopsAlgs/src/Trajectories/: Coverage.cpp
LoopsIO/: CMakeLists.txt
LoopsIO/include/LoopsIO/: DecompositionIO.h  DecompositionProviders.h  DecompositionResultSerializer.h  FieldIO.h  FieldProviders.h  FieldSerializer.h  GraphIO.h  IDecompositionProvider.h  IDecompositionResultProvider.h  IFieldProvider.h  IMapProvider.h  IOHelpers.h  IProblemInstanceProvider.h  ISerializer.h  MapProviders.h  MapSerializer.h  ProblemInstanceSerializer.h  Serializers.h  TrajectorySerializer.h  TrajectorySetSerializer.h  WkbCsvTrajectoryReader.h
LoopsIO/include/LoopsIO/DecompositionProviders/: JsonDecompositionProvider.h  TxtDecompositionProvider.h
LoopsIO/include/LoopsIO/DecompositionResultProviders/: BoostProviders.h
LoopsIO/include/LoopsIO/FieldProviders/: IpeFieldProvider.h  JsonFieldProvider.h  TxtFieldProvider.h
LoopsIO/include/LoopsIO/FieldSerialization/: Blueprint.h  SerializableField.h
LoopsIO/src/: DecompositionIO.cpp  FieldIO.cpp  GraphIO.cpp  IFieldProvider.cpp  IOHelpers.cpp  WkbCsvTrajectoryReader.cpp
LoopsIO/src/DecompositionProviders/: JsonDecompositionProvider.cpp  TxtDecompositionProvider.cpp
LoopsIO/src/FieldProviders/: IpeFieldProvider.cpp  JsonFieldProvider.cpp  TxtFieldProvider.cpp
LoopsIO/src/Helpers/: InStreamWrapper.cpp  JsonInStream.cpp  JsonStream.cpp  OutStreamWrapper.cpp  ReadBuffer.cpp  XmlReader.cpp
LoopsIO/src/MapProviders/: BoostBinaryProvider.cpp  Hdf5MapProvider.cpp  HereMapProvider.cpp  IpeMapProvider.cpp  JsonMapProvider.cpp  MapTxtMapProvider.cpp  OsmXMLMapProvider.cpp
LoopsIO/src/ProblemInstanceProviders/: BoostProviders.cpp  IpePIProvider.cpp
LoopsIO/src/TrajectorySetProviders/: BoostProviders.cpp  OGRInterface.h  WkbCsvTrajectorySetProvider.cpp  WktCsvTrajectorySetProvider.cpp
LoopsLib/: CMakeLists.txt
LoopsLib/src/Algs/: NNLS.cpp
LoopsLib/src/DS/: BaseGraph.cpp  CompactGraph.cpp  EmbeddedGraph.cpp  Graph.cpp  GraphView.cpp  OwnGraph.cpp
LoopsLib/src/Geometry/: Interval.cpp
LoopsLib/src/GraphAlgs/: DFS.cpp
LoopsLib/src/Helpers/: DecompositionObject.cpp  FieldGenerator.cpp  GraphGenerator.cpp  Logger.cpp
LoopsLib/src/Models/: DecompositionResult.cpp  FlowField.cpp  ProblemInstance.cpp  ReconstructedTrajectory.cpp
PyLoops/: CMakeLists.txt  PyLoops.cpp
PyLoops/Bindings/ds/: PyField.cpp  PyGraph.cpp  PyGraph.h  PyTrajectory.cpp  PyTrajectory.h
PyLoops/Bindings/frechet/: PyStrongFrechetGraphData.cpp  PyStrongFrechetGraphData.h
PyLoops/Bindings/loops/: FieldGen.cpp  FieldGen.h  GraphGen.h  PyDecompositionAlgs.cpp  PyDecompositionAlgs.h  PyDecompositionObject.h
PyLoops/Bindings/models/: PyDecompositionResult.cpp  PyDecompositionResult.h  PyLongDouble.h  PyProblemInstance.cpp
PyLoops/Bindings/movetk/: GeometryBindings.h
PyLoops/Bindings/processing/: PySpeedBoundedFmm.cpp  PySpeedBoundedFmm.h  PyTrajectoryChecker.cpp  PyTrajectoryChecker.h  fmm.cpp  fmm.h
PyLoops/PyLoopAlgs/loops/: PyDecompositionAlgs.cpp  PyDecompositionAlgs.h  PyDecompositionObject.cpp
PyLoops/PyLoopAlgs/models/: PyDecompositionResult.cpp  PyProblemInstance.h
PyLoops/include/PyLoops/: PyLoops.h  PyLoops.inc.h
PyLoops/polyfill/pybind11/: iostream.h
PyLoops/src/DS/: PyField.cpp  PyGraph.cpp  PyTrajectory.cpp
PyLoops/src/Frechet/: PyStrongFrechetGraphData.cpp
PyLoops/src/Gui/: GuiIpc.cpp
PyLoops/src/Loops/: FieldGen.cpp  PyDecompositionAlgs.cpp  PyDecompositionObject.cpp
PyLoops/src/MapMatching/: FastMapMatching.cpp
PyLoops/src/Models/: PyDecompositionResult.cpp  PyProblemInstance.cpp
PyLoops/src/Processing/: PyComputeCoverage.cpp  PySpeedBoundedFmm.cpp  PyTrajectoryChecker.cpp  TrajectoryProcessing.cpp  fmm.cpp
PyLoops/src/PyLoopAlgs/: PyLoopsAlgs.cpp
(+179 files in other folders)
